fixed centre problem form text input on mobile

--- a/style.css
+++ b/style.css
@@ -102,4 +102,7 @@ body {
     .sub-title {
       font-size: 0.8em;
     }
+    .sign-up-form {
+      margin: 0 auto;
+    }
 }
